Fix css styling for dark mode and fix style of create pot form

--- a/static/src/input.css
+++ b/static/src/input.css
@@ -16,14 +16,14 @@
     h1 {
         @apply font-archivo-black;
         @apply text-4xl;
-        @apply text-han-purple;
+        @apply text-trypan-blue;
         @apply dark:text-rajah;
         @apply text-center;
     }
     h2, h3 {
         @apply font-archivo-black;
         @apply text-2xl;
-        @apply text-han-purple;
+        @apply text-trypan-blue;
         @apply dark:text-rajah;
     }
 
@@ -39,7 +39,7 @@
     }
 
     article > div > p:nth-child(3), article > div > p:nth-child(4) {
-        @apply text-han-purple;
+        @apply text-trypan-blue;
         @apply dark:text-rajah;
     }
 }
